Fix chatroom creation for new users
- Auto-create chatroom when guest user logs in for the first time
- Sort admin chatroom list by update time (newest first)
- Fix issue where new users see 'start chatting' message without chatroom

--- a/admin_static.html
+++ b/admin_static.html
@@ -142,7 +142,10 @@
             }
 
             getChatroomsForAdmin(adminId) {
-                return this.chatrooms.filter(room => room.admin_id === adminId);
+                // 채팅방 목록을 업데이트 시간 순으로 정렬
+                return this.chatrooms
+                    .filter(room => room.admin_id === adminId)
+                    .sort((a, b) => new Date(b.updated_at) - new Date(a.updated_at));
             }
 
             getMessagesForChatroom(chatroomId) {
