--- a/admin_static.html
+++ b/admin_static.html
@@ -14,6 +14,7 @@
                 <div class="sidebar-header">
                     <h2>관리자 패널</h2>
                     <p id="adminName">관리자님, 안녕하세요!</p>
+                    <button onclick="refreshChatrooms()" class="refresh-btn">🔄 새로고침</button>
                 </div>
                 
                 <div class="chatroom-list" id="chatroomList">
