?뵩 Fix real-time chat issues and auto-create chatrooms
??Fixed auto-chatroom creation for new users
??Added real-time chatroom list updates for admin
??Removed sample guest accounts from database
??Improved Socket.io event handling
??Added chatroom-updated event for admin notifications

Issues Fixed:
- New users now get auto-created chatrooms
- Admin sees new chatrooms in real-time
- Real-time message sync between admin and users
- Removed sample guest1/guest2 accounts
- Improved error handling and user experience

--- a/public/admin.html
+++ b/public/admin.html
@@ -81,6 +81,11 @@
                     displayMessage(message);
                 });
                 
+                // 채팅방 목록 업데이트
+                socket.on('chatroom-updated', () => {
+                    loadChatrooms();
+                });
+                
             } catch (error) {
                 console.error('초기화 오류:', error);
                 alert('페이지 로드 중 오류가 발생했습니다.');
