Complete real-time chat system with auto-chatroom creation
 Guest registration now auto-creates chatroom and redirects to chat
 Admin gets real-time notification when new user registers
 Auto-login after registration for seamless experience
 Welcome message for new chat users
 Each user gets unique chatroom with admin
 Real-time chatroom list updates for admin
 Perfect mobile experience with instant chat access

Features:
- 회원가입  자동 채팅방 생성  즉시 채팅 페이지 이동
- 관리자 실시간 새 채팅방 알림
- 각 계정별 고유 채팅방 보장
- 모바일 최적화된 사용자 경험
- 완벽한 실시간 채팅 동기화

--- a/public/admin.html
+++ b/public/admin.html
@@ -115,6 +115,14 @@
                     console.log('✅ 채팅방 입장 확인:', data);
                 });
                 
+                // 새 채팅방 생성 알림
+                socket.on('new-chatroom-created', (data) => {
+                    console.log('🎉 새 채팅방 생성 알림:', data);
+                    alert(`새 고객이 가입했습니다!\n${data.guestName}님의 채팅방이 생성되었습니다.`);
+                    // 채팅방 목록 새로고침
+                    loadChatrooms();
+                });
+                
             } catch (error) {
                 console.error('초기화 오류:', error);
                 alert('페이지 로드 중 오류가 발생했습니다.');
