메시지 전송 기능 수정
- currentUser 변수 설정 문제 해결
- 사용자 정보 API 엔드포인트 추가 (/api/user/current)
- Socket.io 메시지 처리 로직 개선
- 데이터베이스 연결 및 사용자 검증 강화
- 프론트엔드에서 정확한 사용자 정보 가져오기
- 메시지 전송 오류 처리 개선

--- a/public/admin.html
+++ b/public/admin.html
@@ -56,12 +56,15 @@
         // 관리자 초기화
         async function initializeAdmin() {
             try {
-                // 사용자 정보 확인
-                const userResponse = await fetch('/api/admin/chatrooms');
+                // 현재 사용자 정보 가져오기
+                const userResponse = await fetch('/api/user/current');
                 if (userResponse.status === 401) {
                     window.location.href = '/webchat/';
                     return;
                 }
+                
+                const userData = await userResponse.json();
+                currentUser = userData.user;
                 
                 // Socket.io 연결
                 socket = io({
