실시간 채팅 기능 대폭 개선
- Socket.io 연결 설정 최적화 (pingTimeout, pingInterval 추가)
- 연결 상태 모니터링 강화 (reconnection, disconnect 이벤트 처리)
- 메시지 전송 로직 개선 (상태 검증, 오류 처리 강화)
- 채팅방 입장 로직 개선 (연결 성공 시 자동 입장)
- 실시간 채팅 디버깅 스크립트 추가
- 관리자 페이지 Socket.io 설정 동기화
- 연결 상태 표시 및 사용자 알림 추가
- 메시지 전송 실패 시 입력 필드 복원 기능

--- a/public/admin.html
+++ b/public/admin.html
@@ -70,7 +70,11 @@
                 socket = io({
                     transports: ['websocket', 'polling'],
                     timeout: 20000,
-                    forceNew: true
+                    forceNew: true,
+                    reconnection: true,
+                    reconnectionDelay: 1000,
+                    reconnectionAttempts: 5,
+                    maxReconnectionAttempts: 5
                 });
                 
                 // 연결 상태 확인
